# tcc

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  qlearning.py  qlearning_mujoco.py  run_model.py
docs/: actor-critic.puml  policy-based.puml  run_class.puml  train_class.puml  train_sequence.puml  value-based.puml
docs/imgs/: algo_train  run_sequence.puml
neural_networks/: cartpole_q_network.pth  mojuco_actor.pth  mojuco_critic.pth
scripts/: run_all.sh  train.sh
src/: adaptor.py  environment.py  main.py  qlearning.py  qlearning_mujoco.py  results.txt  run_model.py
src/controllers/: actor_critic.py  controller_abc.py  pid.py
src/reinforcement_learning/: actor.py  critic.py  environment.py  replay_buffer.py  train.py
src/tools/: controllers.py  model.py  plotter.py
