[project]
name = "tcc-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "gymnasium[mujoco]>=1.0.0",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "openai>=1.55.3",
    "pandas>=2.2.3",
    "ruff>=0.8.1",
    "torch>=2.5.1",
]
